--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <section class="header grid-x">
 	<div class="small-3 cell">
 		<div class="logo">
-			<img class="image" src="dist/graphics/temp/encantado-logo.png" alt="encantado" type="image/svg+xml" >
+			<img class="image" src="dist/graphics/svg/encantado.svg" alt="encantado" type="image/svg+xml" >
 			<div class="text">
 				<span class="title">encantado</span><br>
 				<span class="subtitle">diseño web torrevieja</span>
@@ -32,24 +32,59 @@
 
 	<div class="small-3 cell">
 		<ul class="menu align-right icons">
-			<li><a class="circle" href="#"></a></li>
-			<li><a class="circle" href="#"></a></li>
-			<li><a class="circle" href="#"></a></li>
+			<li><a class="circle instagram" href="#"><img src="dist/graphics/svg/instagram.svg" alt="instagram" type="image/svg+xml" ></a></li>
+			<li><a class="circle linkedin" href="#"><img src="dist/graphics/svg/linkedin.svg" alt="linkedin" type="image/svg+xml" ></a></li>
+			<li><a class="circle facebook" href="#"><img src="dist/graphics/svg/facebook.svg" alt="facebook" type="image/svg+xml" ></a></li>
 
 			<li><a class="is-active circle" href="#">es</a></li>
 			<li><a class="circle" href="#">en</a></li>
 			<li><a class="circle" href="#">nl</a></li>
 		</ul>
-		<!-- 
-		<img src="dist/graphics/socials/instagram.svg" alt="instagram" type="image/svg+xml" >
-		<img src="dist/graphics/socials/linkedin.svg" alt="linkedin" type="image/svg+xml" >
-		<img src="dist/graphics/socials/facebook.svg" alt="facebook" type="image/svg+xml" >
-		-->
 	</div>
 </section>
 
 <section class="hero-slider">
 
+</section>
+
+<section class="projects">
+	<div class="grid-x grid-margin-x">
+		<div class="small-4 cell">
+			<p class="title">Nombre projecto</p>
+			<p class="description">Web responsive</p>
+		</div>
+	
+		<div class="small-4 cell">
+			<p class="title">Nombre projecto</p>
+			<p class="description">Web responsive</p>
+		</div>
+	
+		<div class="small-4 cell">
+			<p class="title">Nombre projecto</p>
+			<p class="description">Web responsive</p>
+		</div>
+	</div>
+
+	<div class="grid-x grid-margin-x">
+		<div class="small-4 cell">
+			<p class="title">Nombre projecto</p>
+			<p class="description">Web responsive</p>
+		</div>
+	
+		<div class="small-4 cell">
+			<p class="title">Nombre projecto</p>
+			<p class="description">Web responsive</p>
+		</div>
+	
+		<div class="small-4 cell">
+			<p class="title">Nombre projecto</p>
+			<p class="description">Web responsive</p>
+		</div>
+	</div>
+</section>
+
+<section class="intro">
+	
 </section>
 
 <script src="dist/bundle.js"></script>
