section projects maintain aspect ratio 4:3

--- a/index.html
+++ b/index.html
@@ -46,45 +46,78 @@
 <section class="hero-slider">
 
 </section>
+<section class="projects">
+	
+</section>
+
+
 
 <section class="projects">
 	<div class="grid-x grid-margin-x">
-		<div class="small-4 cell">
+		<div class="small-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
-	
-		<div class="small-4 cell">
+
+		<div class="small-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
-	
-		<div class="small-4 cell">
+
+		<div class="small-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 	</div>
-
+	
 	<div class="grid-x grid-margin-x">
-		<div class="small-4 cell">
+		<div class="small-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
-	
-		<div class="small-4 cell">
+
+		<div class="small-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
-	
-		<div class="small-4 cell">
+		
+		<div class="small-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 	</div>
 </section>
 
-<section class="intro">
-	
+
+
+<section class="intro grid-x">
+	<div class="small-7 cell">
+		<h2>
+			Diseño Web de alta calidad <br>
+			para gente que toma su negocio en serio
+		</h2>
+		<p>
+			Estamos especializados en el diseño de paginas web profesionales, 
+			usando los últimos estándares y soluciones de desarrollo web para
+			que pueda promocionar su negocio a través de Internet. 
+		</p>
+
+		<p>
+			Desde el diseño más sencillo hasta grandes aplicaciones dinámicas,
+			tiendas online o webs para inmobiliarias.
+		</p>
+
+		<p>
+			Contamos con más de 12 años de experiencia en el diseño y desarrollo
+			de páginas web, que no sólo parecen buenos sino que son también
+			técnicamente correctos. Además nos encargamos de que su página web
+			esté optimizada para los motores de búsqueda y le proporcionamos
+			un alojamiento web ajustado a sus necesidades.
+		</p>
+	</div>
+	<div class="small-5 cell">
+			<p>image</p>
+		</div>
 </section>
 
 <script src="dist/bundle.js"></script>
