--- a/index.html
+++ b/index.html
@@ -92,33 +92,38 @@
 
 <section class="intro grid-x">
 	<div class="small-7 cell">
-		<h2>
-			Diseño Web de alta calidad <br>
-			para gente que toma su negocio en serio
-		</h2>
-		<p>
-			Estamos especializados en el diseño de paginas web profesionales, 
-			usando los últimos estándares y soluciones de desarrollo web para
-			que pueda promocionar su negocio a través de Internet. 
-		</p>
-
-		<p>
-			Desde el diseño más sencillo hasta grandes aplicaciones dinámicas,
-			tiendas online o webs para inmobiliarias.
-		</p>
-
-		<p>
-			Contamos con más de 12 años de experiencia en el diseño y desarrollo
-			de páginas web, que no sólo parecen buenos sino que son también
-			técnicamente correctos. Además nos encargamos de que su página web
-			esté optimizada para los motores de búsqueda y le proporcionamos
-			un alojamiento web ajustado a sus necesidades.
-		</p>
-	</div>
-	<div class="small-5 cell">
-			<p>image</p>
+		<div class="container">
+			<h2>
+				Diseño Web de alta calidad <br>
+				para gente que toma su negocio en serio
+			</h2>
+			<p class="info">
+				Estamos especializados en el diseño de paginas web profesionales, 
+				usando los últimos estándares y soluciones de desarrollo web para
+				que pueda promocionar su negocio a través de Internet. 
+			</p>
+	
+			<p class="audience">
+				Desde el diseño más sencillo hasta grandes aplicaciones dinámicas,
+				tiendas online o webs para inmobiliarias.
+			</p>
+	
+			<p class="experience">
+				Contamos con <b>más de 12 años de experiencia</b> en el diseño y desarrollo
+				de páginas web, que no sólo parecen buenos sino que son también
+				técnicamente correctos. Además nos encargamos de que su página web
+				esté <b>optimizada para los motores de búsqueda</b> y le proporcionamos
+				un alojamiento web ajustado a sus necesidades.
+			</p>
 		</div>
+	</div>
+
+	<div class="small-5 cell">
+		<img src="dist/graphics/831284068.jpg" alt="electronics" title="electronics">
+	</div>
 </section>
+
+
 
 <script src="dist/bundle.js"></script>
 </body>
