--- a/index.html
+++ b/index.html
@@ -123,7 +123,36 @@
 	</div>
 </section>
 
+<section class="services">
+	<h4>Servicios</h4>
+	<div class="grid-x">
+		<div class="small-4 cell">
+			<dl>
+				<dt>Diseño Web</dt>
+				<dd><a href="#">Desarrollo Web</a>,</dd>
+				<dd><a href="#">Diseño Web</a>,</dd>
+				<dd><a href="#">accesibilidad y usabilidad</a>.</dd>
+			</dl>
+		</div>
 
+		<div class="small-4 cell">
+			<dl>
+				<dt>Diseño gráfico</dt>
+				<dd>Soluciones creativas: <a href="#">Diseño gráfico</a>,</dd>
+				<dd><a href="#">fotografía</a>,</dd>
+				<dd><a href="#">publicidad y logotipos</a>.</dd>
+			</dl>
+		</div>
+
+		<div class="small-4 cell">
+			<dl>
+				<dt>Mantenimiento Web</dt>
+				<dd><a href="#">Sistemas de gestión de contenido (CMS)</a></dd>
+				<dd>y <a href="#">gestión de relaciones con clientes (CRM)</a>.</dd>
+			</dl>
+		</div>
+	</div>
+</section>
 
 <script src="dist/bundle.js"></script>
 </body>
