--- a/index.html
+++ b/index.html
@@ -46,11 +46,6 @@
 <section class="hero-slider">
 
 </section>
-<section class="projects">
-	
-</section>
-
-
 
 <section class="projects">
 	<div class="grid-x grid-margin-x">
@@ -125,6 +120,7 @@
 
 <section class="services">
 	<h4>Servicios</h4>
+	<hr>
 	<div class="grid-x">
 		<div class="small-4 cell">
 			<dl>
@@ -152,6 +148,50 @@
 			</dl>
 		</div>
 	</div>
+</section>
+
+<section class="why">
+		<div class="grid-x">
+			<div class="small-4 cell">
+				<h4>Por qué eligirnos?</h4>
+				<hr>
+			</div>
+	
+			<div class="small-4 cell checkmark">
+				<ul>
+					<li>
+						Sabemos que si hacemos <u>un buen trabajo</u>, 
+						usted <u>mejora su negocio</u>.
+					</li>
+
+					<li>
+						Lo enfocamos de manera profesional.
+						Entregamos <u>trabajos de calidad y en plazo</u>.
+					</li>
+
+					<li>
+						Realizamos un trabajo con una <u>excelente calidad-precio</u>.
+					</li>
+				</ul>
+			</div>
+
+			<div class="small-4 cell cross">
+				<ul>
+					<li>
+						No creemos en el trabajo rápido y descuidado. 
+						Realizamos <u>un trabajo sólido</u>.
+					</li>
+
+					<li>
+						No creemos en soluciones prefabricadas. Cada trabajo es 
+						<u>único y personalizado</u> de acuerdo con las necesidades de cada cliente.
+					</li>
+				</ul>
+			</div>
+		</div>
+
+
+
 </section>
 
 <script src="dist/bundle.js"></script>
