webpack included html - and image loader

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dist/main.css">
+    <!--<link rel="stylesheet" href="dist/main.css">-->
     <title>Encantado</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
 <section class="header grid-x">
 	<div class="small-3 cell">
 		<div class="logo">
-			<img class="image" src="dist/graphics/svg/encantado.svg" alt="encantado" type="image/svg+xml" >
+			<img class="image" src="graphics/svg/encantado.svg" alt="encantado" type="image/svg+xml" >
 			<div class="text">
 				<span class="title">encantado</span><br>
 				<span class="subtitle">diseño web torrevieja</span>
@@ -32,9 +32,9 @@
 
 	<div class="small-3 cell">
 		<ul class="menu align-right icons">
-			<li><a class="circle instagram" href="#"><img src="dist/graphics/svg/instagram.svg" alt="instagram" type="image/svg+xml" ></a></li>
-			<li><a class="circle linkedin" href="#"><img src="dist/graphics/svg/linkedin.svg" alt="linkedin" type="image/svg+xml" ></a></li>
-			<li><a class="circle facebook" href="#"><img src="dist/graphics/svg/facebook.svg" alt="facebook" type="image/svg+xml" ></a></li>
+			<li><a class="circle instagram" href="#"><img src="graphics/svg/instagram.svg" alt="instagram" type="image/svg+xml" ></a></li>
+			<li><a class="circle linkedin" href="#"><img src="graphics/svg/linkedin.svg" alt="linkedin" type="image/svg+xml" ></a></li>
+			<li><a class="circle facebook" href="#"><img src="graphics/svg/facebook.svg" alt="facebook" type="image/svg+xml" ></a></li>
 
 			<li><a class="is-active circle" href="#">es</a></li>
 			<li><a class="circle" href="#">en</a></li>
@@ -114,7 +114,7 @@
 	</div>
 
 	<div class="small-5 cell">
-		<img src="dist/graphics/831284068.jpg" alt="electronics" title="electronics">
+		<img src="graphics/831284068.jpg" alt="electronics" title="electronics">
 	</div>
 </section>
 
@@ -189,11 +189,21 @@
 				</ul>
 			</div>
 		</div>
+</section>
 
+<section class="contact grid-x">
+	<div class="small-5 cell">
+		<h4>Si buscas:</h4>
+		<h4 class="above">Si buscas:</h4>
+	</div>	
 
+	<div class="small-7 cell">
+	
+	</div>	
+		
 
 </section>
 
-<script src="dist/bundle.js"></script>
+<!--<script src="dist/bundle.js"></script>-->
 </body>
 </html>
