contact section with multi form and footer section

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <section class="header grid-x">
 	<div class="small-3 cell">
 		<div class="logo">
-			<img class="image" src="graphics/svg/encantado.svg" alt="encantado" type="image/svg+xml" >
+			<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
 			<div class="text">
 				<span class="title">encantado</span><br>
 				<span class="subtitle">diseño web torrevieja</span>
@@ -194,13 +194,164 @@
 	<div class="small-5 cell">
 		<h4>Si buscas:</h4>
 		<h4 class="above">Si buscas:</h4>
+		<p>
+			Diseño de paginas web, con cada detalle cuidado al máximo.
+			Hecho a medida, con un diseño único para diferenciarse claramente
+			de la competencia. Facil de mantener. Multilingüe. Responsivo,
+			adaptando a cualquier pantalla o dispositivo.
+			Y preparado para conseguir clientes y vender su producto
+			<span></span>			
+		</p>
 	</div>	
 
 	<div class="small-7 cell">
-	
-	</div>	
-		
+		<h4>Pide su presupuesto</h4>
+		<hr>
 
+		<form class="multi-form" data-abide novalidate action="#" method="get">
+			<div data-abide-error class="alert callout" style="display: none;">
+				<p><i class="fi-alert"></i>Mensaje de error</p>
+			</div>
+
+			<fieldset class="active">
+				<div class="grid-x">
+					<div class="small-6 cell">
+						<label for="nombre">Nombre*</label>
+						<input type="text" id="nombre" name="nombre" required pattern="[a-zA-Z\s]+">
+						<hr>
+					</div>
+
+					<div class="small-6 cell">
+						<label for="apellido">Apellido(s)*</label>
+						<input type="text" id="apellido" name="apellido" required pattern="[a-zA-Z\s]+">
+						<hr>
+					</div>
+				</div>
+
+				<div class="grid-x">
+					<div class="small-6 cell">
+						<label for="email">E-mail*</label>
+						<input type="text" id="email" name="email" required pattern="email">
+						<hr>
+					</div>
+
+					<div class="small-6 cell">
+						<label for="telefono">Teléfono*</label>
+						<input type="text" id="telefono" name="telefono" required pattern="number">
+						<hr>
+					</div>
+				</div>
+
+				<div class="grid-x">
+					<div class="small-6 cell">
+						<label for="empresa">Empresa</label>
+						<input type="text" id="empresa" name="empresa">
+						<hr>
+					</div>
+
+					<div class="small-6 cell">
+						<label for="localidad">Localidad*</label>
+						<input type="text" id="localidad" name="localidad" required pattern="[a-zA-Z\s]+">
+						<hr>
+					</div>
+				</div>
+			</fieldset>
+
+			<fieldset>
+				<div class="grid-x">
+					<div class="small-12 cell">
+						<label for="categoria">Categoría*
+							<select id="categoria" name="categoria">
+								<option value="immo">immo</option>
+								<option value="hotel">hotel</option>
+								<option value="ventas">ventas</option>
+							</select>
+						</label>
+					</div>
+				</div>
+
+				<div class="grid-x">
+					<div class="small-12 cell">
+						<label for="descripcion">Descripción
+							<textarea rows="5" id="descripcion" name="descripcion"></textarea>
+						</label>
+					</div>
+				</div>
+			</fieldset>
+
+			<div class="buttons">
+				<a class="prev">
+					<div class="circle">
+						<img src="graphics/svg/noun_1086550.svg" alt="Next" type="image/svg+xml"/>
+					</div>
+				</a>
+
+				<a class="next">
+					<div class="circle">
+						<img src="graphics/svg/noun_1086550.svg" alt="Next" type="image/svg+xml"/>
+					</div>
+				</a>
+
+				<button class="submit">
+					<div class="circle">
+						<img src="graphics/svg/send.svg" alt="Next" type="image/svg+xml"/>
+					</div>
+				</button>
+			</div>
+
+		</form>
+	</div>
+</section>
+
+<section class="footer grid-x">
+	<div class="small-4 cell">
+		<div class="logo">
+			<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
+			<div class="text">
+				<span class="title">Encantado</span>
+			</div>
+		</div>
+
+		<p>
+			<b>Diseño web Torrevieja</b> <br>
+			Avda. de los Nenúfares S/N <br>
+			Vivero de empresas, despacho 15 <br>
+			03181 Torrevieja (Alicante), Spain
+		</p>
+		</div>
+	</div>
+
+	<div class="small-1 cell">
+		<p>
+			Tel: <br>
+			Movil: <br>
+			Email: <br>
+			Web:
+		</p>
+	</div>
+
+	<div class="small-3 cell">
+		<p>
+			965 703 302 <br>
+			650 297 669 <br>
+			<a href="mailto:info@encantado.net">info@encantado.net</a> <br>
+			<a href="www.encantado.net">www.encantado.net</a>
+		</p>
+	</div>
+
+	<div class="small-1 cell">
+		<a href="#Inicio">Inicio</a> <br>
+		<a href="#Acerca">Acerca</a> <br>
+		<a href="#Trabajos">Trabajos</a> <br>
+		<a href="#Contacto">Contacto</a> <br>
+	</div>
+
+	<div class="small-3 cell">
+		<a href="#desenio">Diseño web Torrevieja</a> <br>
+		<a href="#desarrollo">Desarrollo web</a> <br>
+		<a href="#posicionamiento">Posicionamiento web</a> <br>
+		<a href="#fotografia">Fotografía</a> <br>
+	</div>
 </section>
 
 </body>
