particles and typed in hero slider section

--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,22 @@
 	</div>
 </section>
 
-<section class="hero-slider">
 
+<section class="hero-slider">
+	<div id="particles-js"></div>
+	<div class="container caption">
+		<h1>
+			Diseño de páginas web <br>
+			profesionales en Torrevieja
+		</h1>
+		<div id="typed-strings">
+			<p>diseño y desarrollo de páginas web</p>
+			<p>.....................</p>
+			<p>/////////////////////</p>
+		</div>
+			<p>Expertos en <span class="typer"></span></p>
+	</div>
+	
 </section>
 
 <section class="projects">
@@ -113,6 +127,7 @@
 	</div>
 
 	<div class="small-5 cell">
+		
 		<img src="graphics/831284068.jpg" alt="electronics" title="electronics">
 	</div>
 </section>
@@ -153,7 +168,6 @@
 		<div class="grid-x">
 			<div class="small-4 cell">
 				<h4>Por qué eligirnos?</h4>
-				<hr>
 			</div>
 	
 			<div class="small-4 cell checkmark">
@@ -347,12 +361,14 @@
 	</div>
 
 	<div class="small-3 cell">
-		<a href="#desenio">Diseño web Torrevieja</a> <br>
+		<a href="#disenio">Diseño web Torrevieja</a> <br>
 		<a href="#desarrollo">Desarrollo web</a> <br>
 		<a href="#posicionamiento">Posicionamiento web</a> <br>
 		<a href="#fotografia">Fotografía</a> <br>
 	</div>
 </section>
 
+<script type="text/javascript" src="src/js/particles.js"></script>
+<script type="text/javascript" src="src/js/particles-config.js"></script>
 </body>
 </html>
