triangle shapes in intro and services

--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,7 @@
 
 
 <section class="intro grid-x">
+	<div id="triangle-grey"></div>
 	<div class="small-7 cell">
 		<div class="container">
 			<h2>
@@ -127,12 +128,14 @@
 	</div>
 
 	<div class="small-5 cell">
-		
 		<img src="graphics/831284068.jpg" alt="electronics" title="electronics">
 	</div>
 </section>
 
 <section class="services">
+	<div id="triangle-left"></div>
+	<div id="triangle-middle"></div>
+	<div id="triangle-right"></div>
 	<h4>Servicios</h4>
 	<hr>
 	<div class="grid-x">
