form submit message when valid with ajax

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Encantado</title>
+	<title>Encantado</title>
+	
 </head>
 <body>
 
@@ -220,6 +221,13 @@
 	</div>	
 
 	<div class="small-7 cell">
+		<div id="callout" class="callout success hide" data-closable>
+			<h5>Gracias por tu mensaje</h5>
+			<button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+
 		<h4>Pide su presupuesto</h4>
 		<hr>
 
