made responsive for hero slider - and projects section

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	<div class="small-3 cell">
 		<div class="logo">
 			<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
-			<div class="text">
+			<div class="text show-for-large">
 				<span class="title">encantado</span><br>
 				<span class="subtitle">diseño web torrevieja</span>
 			</div>
@@ -32,9 +32,9 @@
 
 	<div class="small-3 cell">
 		<ul class="menu align-right icons">
-			<li><a class="circle instagram" href="#"><img src="graphics/svg/instagram.svg" alt="instagram" type="image/svg+xml" ></a></li>
-			<li><a class="circle linkedin" href="#"><img src="graphics/svg/linkedin.svg" alt="linkedin" type="image/svg+xml" ></a></li>
-			<li><a class="circle facebook" href="#"><img src="graphics/svg/facebook.svg" alt="facebook" type="image/svg+xml" ></a></li>
+			<li><a class="circle instagram show-for-large" href="#"><img src="graphics/svg/instagram.svg" alt="instagram" type="image/svg+xml" ></a></li>
+			<li><a class="circle linkedin show-for-large" href="#"><img src="graphics/svg/linkedin.svg" alt="linkedin" type="image/svg+xml" ></a></li>
+			<li><a class="circle facebook show-for-large" href="#"><img src="graphics/svg/facebook.svg" alt="facebook" type="image/svg+xml" ></a></li>
 
 			<li><a class="is-active circle" href="#">es</a></li>
 			<li><a class="circle" href="#">en</a></li>
@@ -46,9 +46,9 @@
 
 <section class="hero-slider">
 	<div id="particles-js"></div>
-	<div class="container caption">
+	<div class="container">
 		<h1>
-			Diseño de páginas web <br>
+			Diseño de páginas web
 			profesionales en Torrevieja
 		</h1>
 		<div id="typed-strings">
@@ -56,41 +56,39 @@
 			<p>.....................</p>
 			<p>/////////////////////</p>
 		</div>
-			<p>Expertos en <span class="typer"></span></p>
+		<p>Expertos en <span class="typer"></span></p>
 	</div>
 	
 </section>
 
 <section class="projects">
-	<div class="grid-x grid-margin-x">
-		<div class="small-4 cell"> 
+	<div class="grid-x grid-margin-x grid-margin-y">
+		<div class="small-12 medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 
-		<div class="small-4 cell"> 
+		<div class="small-12 medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 
-		<div class="small-4 cell"> 
-			<p class="title">Nombre projecto</p>
-			<p class="description">Web responsive</p>
-		</div>
-	</div>
-	
-	<div class="grid-x grid-margin-x">
-		<div class="small-4 cell"> 
+		<div class="small-12 medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 
-		<div class="small-4 cell"> 
+		<div class="small-12 medium-6 large-4 cell"> 
+			<p class="title">Nombre projecto</p>
+			<p class="description">Web responsive</p>
+		</div>
+
+		<div class="small-12 medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 		
-		<div class="small-4 cell"> 
+		<div class="small-12 medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
