made responsive for intro section

--- a/src/index.html
+++ b/src/index.html
@@ -96,8 +96,8 @@
 </section>
 
 <section class="intro grid-x">
-	<div id="triangle-grey"></div>
-	<div class="small-7 cell">
+	<div id="triangle-grey" class="show-for-large"></div>
+	<div class="small-12 medium-12 large-7 cell">
 		<div class="container">
 			<h2>
 				Diseño Web de alta calidad <br>
@@ -124,7 +124,7 @@
 		</div>
 	</div>
 
-	<div class="small-5 cell">
+	<div class="large-5 cell show-for-large">
 		<img src="graphics/831284068.jpg" alt="electronics" title="electronics">
 	</div>
 </section>
