made responsive for services section

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
 </section>
 
 <section class="intro grid-x">
-	<div id="triangle-grey" class="show-for-large"></div>
+	<div id="triangle-grey"></div>
 	<div class="small-12 medium-12 large-7 cell">
 		<div class="container">
 			<h2>
@@ -136,7 +136,7 @@
 	<h4>Servicios</h4>
 	<hr>
 	<div class="grid-x">
-		<div class="small-4 cell">
+		<div class="small-12 medium-4 large-4 cell">
 			<dl>
 				<dt>Diseño Web</dt>
 				<dd><a href="#">Desarrollo Web</a>,</dd>
@@ -145,16 +145,17 @@
 			</dl>
 		</div>
 
-		<div class="small-4 cell">
+		<div class="small-12 medium-4 large-4 cell">
 			<dl>
 				<dt>Diseño gráfico</dt>
-				<dd>Soluciones creativas: <a href="#">Diseño gráfico</a>,</dd>
+				<dd>Soluciones creativas:</dd>
+				 <dd><a href="#">Diseño gráfico</a>,</dd>
 				<dd><a href="#">fotografía</a>,</dd>
 				<dd><a href="#">publicidad y logotipos</a>.</dd>
 			</dl>
 		</div>
 
-		<div class="small-4 cell">
+		<div class="small-12 medium-4 large-4 cell">
 			<dl>
 				<dt>Mantenimiento Web</dt>
 				<dd><a href="#">Sistemas de gestión de contenido (CMS)</a></dd>
