made responsive for why section

--- a/src/index.html
+++ b/src/index.html
@@ -167,11 +167,12 @@
 
 <section class="why">
 		<div class="grid-x">
-			<div class="small-4 cell">
+			<div class="medium-12 large-4 cell">
 				<h4>Por qué eligirnos?</h4>
+				<hr>
 			</div>
 	
-			<div class="small-4 cell checkmark">
+			<div class="medium-6 large-4 cell checkmark">
 				<ul>
 					<li>
 						Sabemos que si hacemos <u>un buen trabajo</u>, 
@@ -189,7 +190,7 @@
 				</ul>
 			</div>
 
-			<div class="small-4 cell cross">
+			<div class="medium-6 large-4 cell cross">
 				<ul>
 					<li>
 						No creemos en el trabajo rápido y descuidado. 
