made responsive for contact section

--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
 			Hecho a medida, con un diseño único para diferenciarse claramente
 			de la competencia. Facil de mantener. Multilingüe. Responsivo,
 			adaptando a cualquier pantalla o dispositivo.
-			Y preparado para conseguir clientes y vender su producto
+			Y preparado para conseguir clientes y vender su producto.
 			<span></span>			
 		</p>
 	</div>	
@@ -239,37 +239,32 @@
 			-->
 			<fieldset class="active">
 				<div class="grid-x">
-					<div class="small-6 cell">
+					<div class="small-12 medium-6 cell">
 						<label for="nombre">Nombre*</label>
 						<input type="text" id="nombre" name="nombre" required pattern="[a-zA-Z\s]+">
-						
 					</div>
 
-					<div class="small-6 cell">
+					<div class="small-12 medium-6 cell">
 						<label for="apellido">Apellido(s)*</label>
 						<input type="text" id="apellido" name="apellido" required pattern="[a-zA-Z\s]+">
 					</div>
-				</div>
 
-				<div class="grid-x">
-					<div class="small-6 cell">
+					<div class="small-12 medium-6 cell">
 						<label for="email">E-mail*</label>
 						<input type="text" id="email" name="email" required pattern="email">
 					</div>
 
-					<div class="small-6 cell">
+					<div class="small-12 medium-6 cell">
 						<label for="telefono">Teléfono*</label>
 						<input type="text" id="telefono" name="telefono" required pattern="number">
 					</div>
-				</div>
 
-				<div class="grid-x">
-					<div class="small-6 cell">
+					<div class="small-12 medium-6 cell">
 						<label for="empresa">Empresa</label>
 						<input type="text" id="empresa" name="empresa">
 					</div>
 
-					<div class="small-6 cell">
+					<div class="small-12 medium-6 cell">
 						<label for="localidad">Localidad*</label>
 						<input type="text" id="localidad" name="localidad" required pattern="[a-zA-Z\s]+">
 					</div>
