made responsive for footer section

--- a/src/index.html
+++ b/src/index.html
@@ -232,11 +232,6 @@
 		<hr>
 
 		<form id="contact-form" class="multi-form" data-abide novalidate action="#contact-form" method="get">
-			<!-- Mensaje de error
-			<div data-abide-error class="alert callout" style="display: none;">
-				<p><i class="fi-alert"></i>Mensaje de error</p>
-			</div>
-			-->
 			<fieldset class="active">
 				<div class="grid-x">
 					<div class="small-12 medium-6 cell">
@@ -319,53 +314,64 @@
 </section>
 
 <section class="footer grid-x">
-	<div class="small-4 cell">
-		<div class="logo">
-			<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
-			<div class="text">
-				<span class="title">Encantado</span>
+	<div class="small-12 medium-8 cell">
+		<div class="grid-x">
+			<div class="medium-12 large-7 cell">
+				<div class="logo">
+					<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
+					<div class="text">
+						<span class="title">Encantado</span>
+					</div>
+				</div>
+
+				<p>
+					<b>Diseño web Torrevieja</b> <br>
+					Avda. de los Nenúfares S/N <br>
+					Vivero de empresas, despacho 15 <br>
+					03181 Torrevieja (Alicante), Spain
+				</p>
+			</div>
+
+			<div class="medium-12 large-5 cell footer-padding">
+				<div class="grid-x">
+					<div class="small-3 cell">
+						<p>
+							Tel: <br>
+							Movil: <br>
+							Email: <br>
+							Web:
+						</p>
+					</div>
+				
+					<div class="small-9 cell">
+						<p>
+							965 703 302 <br>
+							650 297 669 <br>
+							<a href="mailto:info@encantado.net">info@encantado.net</a> <br>
+							<a href="www.encantado.net">www.encantado.net</a>
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
+	</div>
 
-		<p>
-			<b>Diseño web Torrevieja</b> <br>
-			Avda. de los Nenúfares S/N <br>
-			Vivero de empresas, despacho 15 <br>
-			03181 Torrevieja (Alicante), Spain
-		</p>
+	<div class="small-12 medium-4 cell footer-padding">
+		<div class="grid-x">
+			<div class="medium-12 large-4 cell">
+				<a href="#Inicio">Inicio</a> <br>
+				<a href="#Acerca">Acerca</a> <br>
+				<a href="#Trabajos">Trabajos</a> <br>
+				<a href="#Contacto">Contacto</a> <br>
+			</div>
+
+			<div class="medium-12 large-8 cell">
+				<a href="#disenio">Diseño web Torrevieja</a> <br>
+				<a href="#desarrollo">Desarrollo web</a> <br>
+				<a href="#posicionamiento">Posicionamiento web</a> <br>
+				<a href="#fotografia">Fotografía</a> <br>
+			</div>
 		</div>
-	</div>
-
-	<div class="small-1 cell">
-		<p>
-			Tel: <br>
-			Movil: <br>
-			Email: <br>
-			Web:
-		</p>
-	</div>
-
-	<div class="small-3 cell">
-		<p>
-			965 703 302 <br>
-			650 297 669 <br>
-			<a href="mailto:info@encantado.net">info@encantado.net</a> <br>
-			<a href="www.encantado.net">www.encantado.net</a>
-		</p>
-	</div>
-
-	<div class="small-1 cell">
-		<a href="#Inicio">Inicio</a> <br>
-		<a href="#Acerca">Acerca</a> <br>
-		<a href="#Trabajos">Trabajos</a> <br>
-		<a href="#Contacto">Contacto</a> <br>
-	</div>
-
-	<div class="small-3 cell">
-		<a href="#disenio">Diseño web Torrevieja</a> <br>
-		<a href="#desarrollo">Desarrollo web</a> <br>
-		<a href="#posicionamiento">Posicionamiento web</a> <br>
-		<a href="#fotografia">Fotografía</a> <br>
 	</div>
 </section>
 
