made responsive header section without hamburger menu

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,11 @@
 	
 </head>
 <body>
-
 <section class="header grid-x">
-	<div class="small-3 cell">
+	<div class="small-3 cell container-logo">
 		<div class="logo">
 			<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
-			<div class="text show-for-large">
+			<div class="text">
 				<span class="title">encantado</span><br>
 				<span class="subtitle">diseño web torrevieja</span>
 			</div>
@@ -30,11 +29,11 @@
 		</ul>
 	</div>
 
-	<div class="small-3 cell">
+	<div class="small-3 cell container-icons">
 		<ul class="menu align-right icons">
-			<li><a class="circle instagram show-for-large" href="#"><img src="graphics/svg/instagram.svg" alt="instagram" type="image/svg+xml" ></a></li>
-			<li><a class="circle linkedin show-for-large" href="#"><img src="graphics/svg/linkedin.svg" alt="linkedin" type="image/svg+xml" ></a></li>
-			<li><a class="circle facebook show-for-large" href="#"><img src="graphics/svg/facebook.svg" alt="facebook" type="image/svg+xml" ></a></li>
+			<li><a class="circle instagram" href="#"><img src="graphics/svg/instagram.svg" alt="instagram" type="image/svg+xml" ></a></li>
+			<li><a class="circle linkedin" href="#"><img src="graphics/svg/linkedin.svg" alt="linkedin" type="image/svg+xml" ></a></li>
+			<li><a class="circle facebook" href="#"><img src="graphics/svg/facebook.svg" alt="facebook" type="image/svg+xml" ></a></li>
 
 			<li><a class="is-active circle" href="#">es</a></li>
 			<li><a class="circle" href="#">en</a></li>
