social icons in mobile menu in header section

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 				<li><a href="#">contacto</a></li>
 			</ul>
 
-			<ul class="menu align-right icons">
+			<ul class="menu mobile-social">
 				<li><a class="circle instagram" href="#"><img src="graphics/svg/instagram.svg" alt="instagram" type="image/svg+xml" ></a></li>
 				<li><a class="circle linkedin" href="#"><img src="graphics/svg/linkedin.svg" alt="linkedin" type="image/svg+xml" ></a></li>
 				<li><a class="circle facebook" href="#"><img src="graphics/svg/facebook.svg" alt="facebook" type="image/svg+xml" ></a></li>
