fix vertical align heading next to logo in header section

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,15 @@
 
 <section id="header-menu" class="header grid-x">
 	<div class="small-3 cell container-logo">
+			<div class="logo">
+				<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
+				<div class="text">
+					<span class="title">encantado</span><br>
+					<span class="subtitle">diseño web torrevieja</span>
+				</div>
+			</div>
+		
+		<!--
 		<div class="logo">
 			<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
 			<div class="text">
@@ -18,6 +27,7 @@
 				<span class="subtitle">diseño web torrevieja</span>
 			</div>
 		</div>
+		-->
 	</div>
 
 	<div class="off-canvas position-right " id="offCanvasRightOverlap" data-off-canvas data-transition="overlap">
