fix px to rem, triangle class show for large and paddings in intro section

--- a/src/index.html
+++ b/src/index.html
@@ -106,48 +106,47 @@
 		</div>
 		<p>Expertos en <span class="typer"></span></p>
 	</div>
-	
 </section>
 
 
 <section class="projects">
 	<div class="grid-x grid-margin-x grid-margin-y">
-		<div class="small-12 medium-6 large-4 cell"> 
+		<div class="medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 
-		<div class="small-12 medium-6 large-4 cell"> 
+		<div class="medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 
-		<div class="small-12 medium-6 large-4 cell"> 
+		<div class="medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 
-		<div class="small-12 medium-6 large-4 cell"> 
+		<div class="medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 
-		<div class="small-12 medium-6 large-4 cell"> 
+		<div class="medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 		
-		<div class="small-12 medium-6 large-4 cell"> 
+		<div class="medium-6 large-4 cell"> 
 			<p class="title">Nombre projecto</p>
 			<p class="description">Web responsive</p>
 		</div>
 	</div>
 </section>
 
-<section class="intro grid-x">
-	<div id="triangle-grey"></div>
-	<div class="small-12 medium-12 large-7 cell">
-		<div class="container">
+<section class="intro">
+	<div id="triangle-grey" class="show-for-large"></div>
+	<div class="grid-x">
+		<div class="medium-12 large-8 cell">
 			<h2>
 				Diseño Web de alta calidad <br>
 				para gente que toma su negocio en serio
@@ -171,11 +170,14 @@
 				un alojamiento web ajustado a sus necesidades.
 			</p>
 		</div>
-	</div>
 
-	<div class="large-5 cell show-for-large">
-		<img src="graphics/831284068.jpg" alt="electronics" title="electronics">
+		<div class="large-4 cell show-for-large">
+			<img src="graphics/831284068.jpg" alt="electronics" title="electronics">
+		</div>
 	</div>
+	
+
+	
 </section>
 
 <section class="services">
