fix px to rem, triangles re-positioned and class show for large and paddings in cell in services section

--- a/src/index.html
+++ b/src/index.html
@@ -175,18 +175,15 @@
 			<img src="graphics/831284068.jpg" alt="electronics" title="electronics">
 		</div>
 	</div>
-	
-
-	
 </section>
 
 <section class="services">
-	<div id="triangle-left"></div>
-	<div id="triangle-middle"></div>
-	<div id="triangle-right"></div>
+	<div id="triangle-left" class="show-for-large"></div>
+	<div id="triangle-middle" class="show-for-large"></div>
+	<div id="triangle-right" class="show-for-large"></div>
 	<h4>Servicios</h4>
 	<hr>
-	<div class="grid-x">
+	<div class="grid-x grid-margin-x">
 		<div class="small-12 medium-4 large-4 cell">
 			<dl>
 				<dt>Diseño Web</dt>
