fix px to rem and paddings in services section

--- a/src/index.html
+++ b/src/index.html
@@ -214,8 +214,8 @@
 </section>
 
 <section class="why">
-		<div class="grid-x">
-			<div class="medium-12 large-4 cell">
+		<div class="grid-x grid-margin-x">
+			<div class="medium-12 large-3 cell">
 				<h4>Por qué eligirnos?</h4>
 				<hr>
 			</div>
@@ -238,7 +238,7 @@
 				</ul>
 			</div>
 
-			<div class="medium-6 large-4 cell cross">
+			<div class="medium-6 large-5 cell cross">
 				<ul>
 					<li>
 						No creemos en el trabajo rápido y descuidado. 
