fix px to rem and height for mobile version in hero slider section, indent intro section, services keeps longer grid of 3 and smaller paddings for mobile version in all sections

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
 	<div id="particles-js"></div>
 	<div class="container">
 		<h1>
-			Diseño de páginas web
+			Diseño de páginas web <br>
 			profesionales en Torrevieja
 		</h1>
 		<div id="typed-strings">
