changed text of back button of drill down, darken social icons on hover and remove focus of close button in mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Encantado</title>
-	
 </head>
 <body>
 
 <section id="header-menu" class="header grid-x">
 	<div class="small-3 cell container-logo">
 		<div class="logo">
-			<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
+			<a href="#"><img class="image" src="graphics/svg/encantado.svg" alt="encantado"  ></a>
+			
 			<div class="text">
-				<span class="title">encantado</span><br>
-				<span class="subtitle">diseño web torrevieja</span>
+				<a href="#" class="title">encantado</a><br>
+				<a href="#" class="subtitle">diseño web torrevieja</a>
 			</div>
 		</div>
 	</div>
@@ -32,8 +32,9 @@
 				<li><a href="#">nl</a></li>
 			</ul>
 			
-	
-			<ul class="vertical menu drilldown" data-drilldown>
+
+			
+			<ul class="vertical menu" data-drilldown data-back-button='<li class="js-drilldown-back"><a tabindex="0">Volver</a></li>'>
 				<li><a class="is-active" href="#">inicio</a></li>
 				<li><a href="#">nosotros</a></li>
 				<li><a href="#">trabajos</a></li>
@@ -368,7 +369,7 @@
 				<div class="grid-x">
 					<div class="medium-12 large-7 cell">
 						<div class="logo">
-							<img class="image" src="graphics/svg/encantado.svg" alt="encantado"  >
+							<a href="#"><img class="image" src="graphics/svg/encantado.svg" alt="encantado"  ></a>
 							<div class="text">
 								<span class="title">Encantado</span>
 							</div>
